Finished test implementation. Converted attr in Book from ISBN to isbn Merged dev into this branch